--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,11 +9,6 @@
       "type": "image/png"
     },
     {
-      "src": "/icon64.png",
-      "sizes": "64x64",
-      "type": "image/png"
-    },
-    {
       "src": "/icon128.png",
       "sizes": "128x128",
       "type": "image/png"
@@ -23,9 +18,15 @@
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/icon128.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#00f3ff",
   "background_color": "#05050a",
